--- a/通讯录/通讯录.vcxproj
+++ b/通讯录/通讯录.vcxproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup Label="ProjectConfigurations">
     <ProjectConfiguration Include="Debug|Win32">
@@ -21,8 +21,8 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{9a396cd9-86ba-4d4c-acdd-0e24a0f7864d}</ProjectGuid>
-    <RootNamespace>My1025</RootNamespace>
+    <ProjectGuid>{a68f5760-c945-4a1e-8c17-53fe5afa321b}</ProjectGuid>
+    <RootNamespace>通讯录</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -139,10 +139,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="memcopy.c" />
-    <ClCompile Include="memmove.c" />
-    <ClCompile Include="str.c" />
-    <ClCompile Include="strstr.c" />
+    <ClCompile Include="contact.c" />
+    <ClCompile Include="test.c" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="contact.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
